--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -33,16 +33,33 @@
             <div class="panel panel-default">
               <div class="panel-heading">Filter Search</div>
               <div class="panel-body">
-                <form>
+                <form id="form">
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
                         <label for="date">Enter a Date</label>
                         <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
                       </li>
+                      <li class="filter list-group-item">
+                        <label for="city">Enter a City Name</label>
+                        <input class="form-control" id="city" type="text" placeholder="fresno">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="state">Enter State Code</label>
+                        <input class="form-control" id="state" type="text" placeholder="ca">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="country">Enter Country Code</label>
+                        <input class="form-control" id="country" type="text" placeholder="us">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="shape">Enter Shape</label>
+                        <input class="form-control" id="shape" type="text" placeholder="circle">
+                      </li>
                     </ul>
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                  <button id="reset" type="button"  onclik="reset()" value="Reset Form" class="btn btn-default">Reset Search</button>
                 </form>
               </div>
             </div>
